wordpress-stack/fringe-salon/wordpress/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fringe-salon
  namespace: wordpress-stack
spec:
  replicas: 0
  selector:
    matchLabels:
      app: fringe-salon
  template:
    metadata:
      labels:
        app: fringe-salon
    spec:
      containers:
        - name: fringe-salon
          image: wordpress:latest
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /var/www/html
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: fringe-salon-config-pvc
