wordpress-stack/fringe-salon/wordpress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fringe-salon-service
  namespace: wordpress-stack
spec:
  selector:
    app: fringe-salon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
